# holo_agent

./: README.md
src/audio/audio_input/: package.xml  setup.py
src/audio/audio_input/audio_input/: audio_input_bt.py  audio_input_local.py
src/audio/audio_input/resource/: hotword.txt
src/audio/audio_output/: package.xml  setup.cfg  setup.py
src/audio/audio_output/audio_output/: audio_output_bt.py  audio_output_local.py  speech_sam_hi.py
src/behaviours/llm_robot/: package.xml  setup.py
src/behaviours/llm_robot/launch/: llm_robot.launch.py
src/behaviours/llm_robot/llm_robot/: arm_robot.py  builder.py  motion_tasks_base.py  motion_tasks_robot copy.py  motion_tasks_robot.py  ros_proxy.py  utils.py
src/behaviours/llm_robot/resource/: llm_robot.rviz  notebook_debug.ipynb
src/behaviours/py_trees/: pyproject.toml
src/behaviours/py_trees/docs/: introduction.rst
src/behaviours/py_trees/py_trees/: behaviours.py  common.py
src/llm/fastmcp/: package.xml  setup.cfg  setup.py
src/llm/fastmcp/fastmcp/: fastmcp_client_demo.py  fastmcp_server_demo.py  fastmcp_weather_client_demo.py
src/llm/llm_config/: package.xml  setup.py
src/llm/llm_config/llm_config/: user_config.py
src/llm/llm_config/resource/: llm_prompt.md  llm_prompt_simple.md
src/llm/llm_interfaces/: CMakeLists.txt  package.xml
src/llm/llm_interfaces/action/: ArmMoveTo.action  MoveToPickPlace.action  Recognize.action  RecognizePickPlace.action
src/llm/llm_interfaces/srv/: BehavioursTree.srv  (+4 more)
src/llm/llm_model/: package.xml  setup.py
src/vision/vision_server/: package.xml  setup.py
(+7 files in other folders)
