<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>audio_input</name>
  <version>0.0.1</version>
  <description>The audio_input package contains input nodes for the ROS-LLM.</description>
  <maintainer email="howe12@126.com">Herman Ye</maintainer>
  <license>Apache-2.0</license>

  <depend>llm_config</depend>
  <depend>llm_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
